K/kube-openid-connect-rpclG1/kube-openid-connect.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kube-openid-connect
  labels:
    helm.sh/chart: kube-openid-connect-1.1.0
    app.kubernetes.io/name: kube-openid-connect
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: http
      protocol: TCP
      port: 5000
  selector:
    app.kubernetes.io/name: kube-openid-connect
    app.kubernetes.io/instance: release-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kube-openid-connect
  labels:
    helm.sh/chart: kube-openid-connect-1.1.0
    app.kubernetes.io/name: kube-openid-connect
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-openid-connect
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-openid-connect
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-kube-openid-connect
      securityContext:
        fsGroup: 10001
      containers:
        - name: kube-openid-connect
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                "": NET_RAW
            readOnlyRootFilesystem: true
          image: devopstales/kube-openid-connector:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-kube-openid-connect
  labels:
    helm.sh/chart: kube-openid-connect-1.1.0
    app.kubernetes.io/name: kube-openid-connect
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: chart-example.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-kube-openid-connect
                port:
                  number: 5000
